# ijaza

./: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: package-structure-and-publishing.md
ijaza/: __init__.py  llm_integration.py  normalizer.py  types.py  validator.py
scripts/: fetch_quran_data.py  process_qul_data.py
